# enowars5-service-activitytracker

./: .gitignore  README.md
.github/workflows/: enochecker_test.yml
benchmark/: benchmark.py
broken_crate/: README.md
broken_crate/uuid-gen/: Cargo.toml
checker/: .env  docker-compose.yml  wait_for_service.sh
checker/src/: checker.py  requirements.txt
checker/src/images/: LICENSE
checker/src/post_templates/: simple_exploits.template  simple_hashes.template  simple_posts.template  simple_work.template
documentation/: README.md
documentation/Vuln 1/: Vulnerability1.md  vuln1.py
service/: Dockerfile  docker-compose.yml  entrypoint.sh
service/src/activitytracker/: .env  Cargo.toml  Rocket.toml
service/src/activitytracker/migrations/2021-04-27-114719_create_posts/: up.sql
service/src/activitytracker/migrations/2021-05-04-012157_create_users/: up.sql
service/src/activitytracker/migrations/2021-05-04-012453_create_chats/: up.sql
service/src/activitytracker/migrations/2021-05-11-095445_add_post_creator/: up.sql
service/src/activitytracker/migrations/2021-06-21-113535_add_friends/: up.sql
service/src/activitytracker/src/: dbpool.rs  main.rs  models.rs  schema.rs
service/src/activitytracker/src/models/: chats.rs  friends.rs  mod.rs  posts.rs  users.rs
service/src/activitytracker/src/views/: auth.rs  friends.rs  mod.rs  posts.rs
service/src/activitytracker/templates/: base.html.tera  post_list.html.tera  post_new.html.tera  post_update.html.tera
service/src/activitytracker/templates/auth/: addimage.tera  forgot.html.tera  login.html.tera  signup.html.tera  viewimages.tera
service/src/activitytracker/templates/friends/: friends_add.html.tera
service/src/activitytracker/templates/posts/: post_list.html.tera  post_new.html.tera  post_update.html.tera
