[package]
name = "activitytracker"
version = "0.1.0"
authors = ["Richard Viehöver <richard.viehoever@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.125", features = ["derive"] }
rocket-multipart-form-data = "0.9.6"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["tera_templates"]